major issues resolved z-index used, relative positioning + abs

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -2,6 +2,11 @@
 @import "variables";
 @import "config";
 @import "include-media";
+@import "header.scss";
+@import "features.scss";
+@import "article.scss";
+@import "footer.scss";
+
 
 // Globals
 body {
@@ -12,7 +17,8 @@ body {
 
 .main {
   min-width: 320px;
-  
+  position: relative;
+  overflow: auto;
 }
 a,
 a:visited {
@@ -58,6 +64,7 @@ a:visited {
   font-weight: weight(light);
   color: $primary-dark-blue;
 }
+
 /* 
 *
               Header 
@@ -70,6 +77,7 @@ a:visited {
   padding: 0 7.5%;
   display: flex;
   align-items: center;
+  position: relative;
   &__logo {
     margin-right: auto;
   }
@@ -223,61 +231,77 @@ a:visited {
               Media Queries 
 *
 */
+@media (max-width: 1024px) {
+  .desktop-image {
+    display: none;
+  }
+}
 
 @media (min-width: 700px) {
+.main {
+  border: solid rebeccapurple 1px;
+  overflow: auto;
+}
+
 /* 
 *
               Navbar 
 *
 */
+  // Nav
+  .nav {
+    height: 4.5em;
+    position: relative;
+    z-index: 1;
+    background: $transparent-white;
+    color: $primary-dark-blue;
+    &__menu {
+      display: none;
+    }
+  }
+  
 
-
-
-/* 
+  /* 
 *
               Hero 
 *
 */
-.hero {
-  text-align: left;
-  padding-bottom: 2.5rem;
-  &__image {
-    height: 45vh;
-    width: 100%;
-    background: url(../images/image-mockups.png) no-repeat,
-      url(../images/bg-intro-mobile.svg) no-repeat;
-    background-position: right 50% bottom -7%, left center;
-    background-repeat: no-repeat, repeat;
-    background-size: 87%, cover;
+  .hero {
+    display: flex;
+    flex-direction: row-reverse;
+    &__text {
+      width: 50vw;
+      text-align: left;
+    }
+    &__image {
+      height: 70vh;
+      width: 100%;
+      background: url(../images/bg-intro-desktop.svg) no-repeat;
+      background-position: right -30vw bottom 30%;
+      background-size: cover;
+    }
   }
-  &__title {
-    font-weight: weight(light);
-    font-size: 2.9em;
-    color: $primary-dark-blue;
-  }
-  &__subtitle {
-    line-height: 1.7;
-    padding: 0 7.5%;
-  }
-  &__cta {
-    margin: 2em;
-  }
-}
 
-
+  .desktop-image {
+    position: relative;
+    left: 22.5vw;
+    top: -12vh;
+  }
 
   // Grid specs for list items
- .grid {
-   display: grid;
-   grid-template-columns: repeat(4, minmax(auto, 20em));
-   gap: 1em;
-   justify-content: center;
-   text-align: left;
- }
+  .grid {
+    display: grid;
+    grid-template-columns: repeat(4, minmax(auto, 20em));
+    gap: 1em;
+    justify-content: center;
+    text-align: left;
+  }
 
- .footer {
-   display: flex;
-   justify-content: space-around;
- }
-
+  .footer {
+    display: flex;
+    justify-content: space-around;
+  }
 }
+
+
+
